# essentia

./: .gitignore  .gitmodules  CMakeLists.txt  essentiaConfig.cmake.in  essentiaConfigVersion.cmake.in
cmake/: FindFFTW.cmake  FindTaglib.cmake  Findsamplerate.cmake  subdirectory_list.cmake
cmake/modules/: FindFFmpeg.cmake  FindTaglib.cmake  FindTensorflow.cmake  FindYaml.cmake  Findchromaprint.cmake  Findsamplerate.cmake
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/essentia/: debugging.h  essentia.cpp  parameter.h  types.h
src/essentia/scheduler/: network.h
src/essentia/streaming/: multiratebuffer.h  phantombuffer.h  sinkbase.h  sourcebase.h  streamingalgorithm.h
src/essentia/streaming/algorithms/: poolstorage.h  vectorinput.h
src/examples/: CMakeLists.txt  streaming_ringbuffertofile.cpp
